samples/_failures_safe/1761623766_a76476_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d5b3476.c: In function ‘main’:
./samples/SAFE/__tmp_2d5b3476.c:138:9: error: expected expression at end of input
  138 |         if (cols2 == -1)
      |         ^~
./samples/SAFE/__tmp_2d5b3476.c:138:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2d5b3476.c:138:9: error: expected declaration or statement at end of input
